# networking-copilot

./: .env  AGENTS.md  INTEGRATION.md  README.md  crewai_llms.txt  docker-compose.yml  package-lock.json
agents/networking/: .env.example  Dockerfile  pyproject.toml
agents/networking/data/: mark_linkedin_data.json
agents/networking/docs/: api_endpoints.md
agents/networking/outputs/: icebreaker_generator_task.json  linkedin_profile_analyzer_task.json  profile_selector_task.json  summary_generator_task.json
agents/networking/src/networking/: __init__.py  api.py  cache.py  crew.py  execution.py  image_extractor.py  jobs.py  main.py  schemas.py  services.py
agents/networking/src/networking/clients/: __init__.py  brightdata.py
agents/networking/src/networking/config/: agents.yaml  tasks.yaml
agents/networking/src/networking/outputs/: icebreaker_generator_task.json  linkedin_profile_analyzer_task.json  profile_selector_task.json  summary_generator_task.json
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  types.ts
frontend/src/: types.ts
frontend/src/app/: layout.tsx
frontend/src/app/(chat)/: layout.tsx  page.tsx
frontend/src/app/users/[id]/: page.tsx
frontend/src/components/: capture-button.tsx  capture-modal.tsx  chat-pane.tsx  message-bubble.tsx  sidebar.tsx  user-summary-card.tsx
frontend/src/data/: messages.json  users.json
frontend/src/lib/: api.ts
